# django-repo-example

./: .coveragerc  .dockerignore  .flake8  .pre-commit-config.yaml  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini  run-mypy.sh
deploy/: docker-compose.db.yml  docker-compose.develop.yml  docker-compose.tests.yml  docker-compose.yml
deploy/app/: Dockerfile  start-django-dev.sh  start-django-gunicorn.sh  start-tests.sh
example/: asgi.py  settings.py  urls.py  wsgi.py
example/health/: __init__.py  apps.py  checks.py
example/health/api/: __init__.py  urls.py  views.py
example/health/tests/: test_api.py
